// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonToggle renders toggle with custom labels correctly 1`] = `
<label
  className="button-toggle"
>
  <input
    checked={false}
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="toggle-tracks toggle-tracks--unchecked"
  >
    <span
      className="toggle-thumb"
    />
    <div
      className="toggle-button-checked"
    >
      <div
        className="toggle-inner-label"
      >
        Checked
      </div>
    </div>
    <div
      className="toggle-button-unchecked"
    >
      <div
        className="toggle-inner-label"
      >
        Unchecked
      </div>
    </div>
  </span>
  <span
    className="toggle-outer-label"
  >
    Containing Label
  </span>
</label>
`;

exports[`ButtonToggle renders toggle with on/off correctly 1`] = `
<label
  className="button-toggle"
>
  <input
    checked={false}
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="toggle-tracks toggle-tracks--unchecked"
  >
    <span
      className="toggle-thumb"
    />
    <div
      className="toggle-button-checked"
    >
      <div
        className="toggle-inner-label"
      >
        On
      </div>
    </div>
    <div
      className="toggle-button-unchecked"
    >
      <div
        className="toggle-inner-label"
      >
        Off
      </div>
    </div>
  </span>
  
</label>
`;
